--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo ${GITHUB_WORKSPACE}
+      
+      - name: Copy files to Production location
+        run: cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
