--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Copy files to Production location
-        run: cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
+        run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
