--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
   deployment:
     runs-on: self-hosted
     steps:
+      - name: Delete current site.
+        run: sudo rm -r /var/www/links.blakemiller.ca/
       - name: Copy files to Production location
         run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
       - name: 'Cleanup build folder'
