--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
   deployment:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
       - name: test
         run: ls ${GITHUB_WORKSPACE}
       - name: Copy files to Production location
