--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,14 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-      - name: test
-        run: ls ${GITHUB_WORKSPACE}
+      - name: Deleted current site
+        run: sudo rm -r /var/www/links.blakemiller.ca/*
       - name: Copy files to Production location
         run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
+      - name: 'Cleanup build folder'
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./    
+
