--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Deleted current site
-        run: sudo rm -r /var/www/links.blakemiller.ca/*
+        run: rm -r /var/www/links.blakemiller.ca/*
       - name: Copy files to Production location
-        run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
+        run: cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
       - name: 'Cleanup build folder'
         run: |
           ls -la ./
