--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Deleted current site
         run: sudo rm -r /var/www/links.blakemiller.ca/*
       - name: Copy files to Production location
-        run: cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
+        run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
       - name: 'Cleanup build folder'
         run: |
           ls -la ./
