--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,52 @@
-name: Deployment
-
-concurrency: 
-  group: production
-  cancel-in-progress: true
+name: Deploy site
 
 on:
   push:
-    branches:
-      - main
+    branches: ["public"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+
+concurrency:
+  group: "deploy"
+  cancel-in-progress: false
+
+env:
+  BUILD_PATH: "."
 
 jobs:
-  deployment:
+  build:
+    name: Build
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-      - name: Deleted current site
-        run: sudo rm -r /var/www/links.blakemiller.ca/*
-      - name: Copy files to Production location
-        run: sudo cp -r ${GITHUB_WORKSPACE} /var/www/links.blakemiller.ca
-      - name: 'Cleanup build folder'
-        run: |
-          ls -la ./
-          rm -rf ./* || true
-          rm -rf ./.??* || true
-          ls -la ./    
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-dist
+          path: ${{ env.BUILD_PATH }}/src
+
+  deploy:
+    name: Deploy to Remote Server
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-dist
+          path: src
+
+      - name: Setup SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/github-actions-key
+          chmod 600 ~/.ssh/github-actions-key
+          ssh-keyscan -H 137.184.174.226 >> ~/.ssh/known_hosts
+
+      - name: Deploy via rsync
+        run: |
+          rsync -avz --delete -e "ssh -i ~/.ssh/github-actions-key" src/ blake@137.184.174.226:/var/www/links.blakemiller.ca/
